--- a/practice.html
+++ b/practice.html
@@ -16,11 +16,17 @@
 <header>
 
 <h1>ReadForeign</h1>
+
+<nav>
 <menu>
     <li><a href="index.html">Home</a></li>
     <li><a href="read.html">Read</a></li>
     <li><a href="practice.html">Practice</a></li>
+    <li><a href="about.html">About</a></li>
 </menu>
+</nav>
+
+<hr />
 
 </header>
 
