Finished home page.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
 
     </header>
 
+    <main>
+
+        <h1>Refine your langauge abilities.</h1>
+
+        <p>Create an account today:</p>
+
+        <form method="get" action="read.html">
+
+            <div>
+                <span>Email:</span>
+                <input type="text" placeholder="youremail@gmail.com" />
+            </div>
+
+            <div>
+                <span>Password:</span>
+                <input type="password" placeholder="password" />
+            </div>
+
+            <button type="submit">Login</button>
+            <button type="submit">Sign Up</button>
+
+        </form>
+
+    </main>
+
+    <footer>
+
+        <hr />
+
+        <span>ReadForeign by Alex Kmep. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+
+    </footer>
 
 
 
