Added footer to all pages.

--- a/about.html
+++ b/about.html
@@ -33,7 +33,13 @@
 
 
 
+    <footer>
 
+        <hr />
+
+        <span>ReadForeign by Alex Kmep. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+
+    </footer>
 
 </body>
 
