--- a/practice.html
+++ b/practice.html
@@ -32,7 +32,13 @@
 
 
 
+    <footer>
 
+        <hr />
+
+        <span>ReadForeign by Alex Kmep. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+
+    </footer>
 
 
 </body>
