Added radio buttons to read page and fixed footer on all pages.

--- a/practice.html
+++ b/practice.html
@@ -36,7 +36,7 @@
 
         <hr />
 
-        <span>ReadForeign by Alex Kmep. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+        <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a></span>
 
     </footer>
 
