--- a/read.html
+++ b/read.html
@@ -30,14 +30,49 @@
 
     </header>
 
+    <main>
 
+        <aside>
+
+            <h2>Difficulty</h2>
+
+            <form>
+
+                <fieldset>
+
+                    <input type="radio" id="beginner">
+                    <label for="beginner">Beginner</label>
+
+                    <br>
+
+                    <input type="radio" id="intermediate">
+                    <label for="intermediate">Intermediate</label>
+
+                    <br>
+
+                    <input type="radio" id="advanced">
+                    <label for="advanced">Advanced</label>
+
+                </fieldset>
+
+            </form>
+
+        </aside>
+
+        <article>
+
+            <h1>Article</h1>
+
+        </article>
+
+    </main>
 
 
     <footer>
 
         <hr />
 
-        <span>ReadForeign by Alex Kmep. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+        <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a></span>
 
     </footer>
 
