Added parts of the sidebar.

--- a/read.html
+++ b/read.html
@@ -40,22 +40,43 @@
 
                 <fieldset>
 
-                    <input type="radio" id="beginner">
+                    <input type="radio" id="beginner" value="Beginner" name="difficulty" checked>
                     <label for="beginner">Beginner</label>
 
                     <br>
 
-                    <input type="radio" id="intermediate">
+                    <input type="radio" id="intermediate" value="Intermediate" name="difficulty">
                     <label for="intermediate">Intermediate</label>
 
                     <br>
 
-                    <input type="radio" id="advanced">
+                    <input type="radio" id="advanced" value="Advanced" name="difficulty">
                     <label for="advanced">Advanced</label>
 
                 </fieldset>
 
             </form>
+
+            <hr>
+
+            <h2>Interests</h2>
+
+            <ul>
+
+                <li>Food <button type="button">X</button></li>
+                <li>History <button type="button">X</button></li>
+                <li>Cars <button type="button">X</button></li>
+
+            </ul>
+
+            <form>
+
+                <input type="text" placeholder="Add new interest...">
+                <button type="button">Add</button>
+
+            </form>
+            
+
 
         </aside>
 
