Finished read page

--- a/read.html
+++ b/read.html
@@ -75,6 +75,14 @@
                 <button type="button">Add</button>
 
             </form>
+
+            <hr>
+
+            <form>
+
+                <button type="button">Get New Article</button>
+
+            </form>
             
 
 
@@ -82,7 +90,40 @@
 
         <article>
 
-            <h1>Article</h1>
+            <h1>La Pasta: Un Simbolo Italiano</h1>
+
+            <h3><i>By Il Cuore d'Italia</i></h3>
+
+            <p>
+
+                Molte persone pensano che Marco Polo abbia portato la pasta 
+                in Italia dalla Cina nel 1295. In realtà, questa è solo una leggenda.
+                La storia della pasta è molto più antica e complessa. Già ai tempi
+                dell'Antica Roma esistevano piatti simili, come le "lagane",
+                che erano strisce di pasta cotte al forno, antenate delle moderne lasagne.
+
+            </p>
+
+            <p>
+
+                Tuttavia, la pasta secca come la conosciamo oggi ha origini arabe. 
+                Durante il Medioevo, gli arabi introdussero in Sicilia l'arte di essiccare
+                la pasta al sole. Questa tecnica era fondamentale perché permetteva di 
+                conservare il cibo per lunghi periodi, rendendolo perfetto per i viaggi
+                in mare e per evitare le carestie.
+
+            </p>
+
+            <p>
+
+                Per secoli, la pasta è stata mangiata "in bianco", condita solo con 
+                formaggio e spezie. La vera rivoluzione è arrivata nel XIX secolo a Napoli,
+                quando gli italiani hanno iniziato ad aggiungere il pomodoro, un frutto
+                importato dalle Americhe. Oggi esistono più di 300 formati di pasta e, 
+                per gli italiani, un piatto di spaghetti non è solo cibo: è un simbolo di cultura, 
+                famiglia e unità nazionale.
+
+            </p>
 
         </article>
 
@@ -93,7 +134,11 @@
 
         <hr />
 
-        <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a></span>
+        <p>
+            ReadForeign by Alex Kemp. 
+            <a href="https://github.com/akemp121/startup">GitHub</a>.
+            25 articles read around the world. 
+        </p>
 
     </footer>
 
