Finished practice page (very bare bones)

--- a/practice.html
+++ b/practice.html
@@ -30,7 +30,23 @@
 
     </header>
 
+    <main>
 
+        <h1>Practice</h1>
+
+        <p>These are your saved words:</p>
+
+        <ul>
+
+            <li>cavolo <button type="button">X</button></li>
+            <li>giorno <button type="button">X</button></li>
+            <li>conoscere <button type="button">X</button></li>
+            <li>ghiaccio <button type="button">X</button></li>
+            <li>slancio <button type="button">X</button></li>
+
+        </ul>
+
+    </main>
 
     <footer>
 
