--- a/about.html
+++ b/about.html
@@ -30,8 +30,39 @@
 
     </header>
 
+    <main>
 
+        <h1>About</h1>
 
+        <h3><i>Keep your foreign language proficiency afloat.</i></h3>
+
+        <p>
+
+            Many people who have learned foreign languages (RMs) struggle
+            to find opportunities to practice. While the overall best way 
+            to practice is speaking, other methods such as reading can provide
+            a solid practice, especially with strengthening vocabulary.
+        
+        </p>
+
+        <p>
+
+            This app will allow users to read about topics they find 
+            interesting at a difficulty that pushes them to learn new words. 
+            Once they've accumulated enough unknown words, they'll be able to
+            memorize them and quiz themselves on what they've learned.
+
+        </p>
+
+        <p>
+
+            The process of reading, translating, and memorizing helped me 
+            immensely when learning Spanish and Q'eqchi'. My goal is to streamline 
+            the process into a single, specialized app.
+
+        </p>
+
+    </main>
 
     <footer>
 
