Started to add buttons and bootstrap elements to index and read.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,14 @@
 
         <nav>
             <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="read.html">Read</a></li>
-                <li><a href="practice.html">Practice</a></li>
-                <li><a href="about.html">About</a></li>
+                <ul class="d-flex gap-3 list-unstyled m-0 p-0">
+
+                    <li><a href="index.html" class="btn btn-primary rounded-pill">Home</a></li>
+                    <li><a href="read.html" class="btn btn-primary rounded-pill">Read</a></li>
+                    <li><a href="practice.html" class="btn btn-primary rounded-pill">Practice</a></li>
+                    <li><a href="about.html" class="btn btn-primary rounded-pill">About</a></li>
+
+                </ul>
             </menu>
         </nav>
 
@@ -50,16 +54,16 @@
 
             <div>
                 <span>Email:</span>
-                <input type="text" placeholder="youremail@gmail.com" />
+                <input type="text" placeholder="youremail@gmail.com" class="form-control rounded-pill" />
             </div>
 
             <div>
                 <span>Password:</span>
-                <input type="password" placeholder="password" />
+                <input type="password" placeholder="password" class="form-control rounded-pill"/>
             </div>
 
-            <button type="submit">Login</button>
-            <button type="submit">Sign Up</button>
+            <button type="submit" class="btn btn-primary rounded-pill">Login</button>
+            <button type="submit" class="btn btn-primary rounded-pill">Sign Up</button>
 
         </form>
 
