--- a/read.html
+++ b/read.html
@@ -81,8 +81,8 @@
 
             <form>
 
-                <input type="text" placeholder="Add new interest...">
-                <button type="button">Add</button>
+                <input type="text" placeholder="Add new interest..." class="form-control rounded-pill">
+                <button type="button" class="btn btn-primary rounded-pill">Add</button>
 
             </form>
 
@@ -90,7 +90,7 @@
 
             <form>
 
-                <button type="button">Get New Article</button>
+                <button type="button" class="btn btn-primary rounded-pill">Get New Article</button>
 
             </form>
             
