--- a/practice.html
+++ b/practice.html
@@ -12,31 +12,51 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
 
-    <header>
+    <header class="container-fluid py-3 border-bottom">
 
-        <h1>ReadForeign</h1>
+        <div class="row align-items-center">
 
-        <nav>
-            <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="read.html">Read</a></li>
-                <li><a href="practice.html">Practice</a></li>
-                <li><a href="about.html">About</a></li>
-            </menu>
-        </nav>
+            <div class="col-md-2">
 
-        <p>Welcome, <i>axle121</i></p>
+                <h1 class="m-0">ReadForeign</h1>
 
-        <hr />
+            </div>
+
+            <div class="col-md-6">
+
+                <nav>
+                    <menu>
+                        <ul class="d-flex gap-3 list-unstyled m-0 p-0">
+
+                            <li><a href="index.html" class="btn btn-primary rounded-pill header-button">Home</a>
+                            </li>
+                            <li><a href="read.html" class="btn btn-primary rounded-pill header-button">Read</a></li>
+                            <li><a href="practice.html" class="btn btn-primary rounded-pill header-button active">Practice</a>
+                            </li>
+                            <li><a href="about.html" class="btn btn-primary rounded-pill header-button">About</a></li>
+
+                        </ul>
+                    </menu>
+                </nav>
+
+            </div>
+
+            <div class="col-md-3 text-end">
+
+                <p class="m-0">Welcome, <span class="fw-light">axle121</span></p>
+
+            </div>
+
+        </div>
 
     </header>
 
