Added footer to all pages.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <menu>
                         <ul class="d-flex gap-3 list-unstyled m-0 p-0">
 
-                            <li><a href="index.html" class="btn btn-primary rounded-pill header-button active">Home</a></li>
+                            <li><a href="index.html" class="btn btn-primary rounded-pill header-button active">Home</a>
+                            </li>
                             <li><a href="read.html" class="btn btn-primary rounded-pill header-button">Read</a></li>
                             <li><a href="practice.html" class="btn btn-primary rounded-pill header-button">Practice</a>
                             </li>
@@ -107,9 +108,7 @@
 
     </main>
 
-    <footer>
-
-        <hr />
+    <footer class="container-fluid py-3 border-top">
 
         <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a></span>
 
