--- a/read.html
+++ b/read.html
@@ -160,15 +160,9 @@
     </main>
 
 
-    <footer>
+    <footer class="container-fluid py-3 border-top">
 
-        <hr />
-
-        <p>
-            ReadForeign by Alex Kemp.
-            <a href="https://github.com/akemp121/startup">GitHub</a>.
-            25 articles read around the world.
-        </p>
+        <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a>. 25 articles read around the world</span>
 
     </footer>
 
