--- a/about.html
+++ b/about.html
@@ -96,9 +96,7 @@
 
     </main>
 
-    <footer>
-
-        <hr />
+    <footer class="container-fluid py-3 border-top">
 
         <span>ReadForeign by Alex Kemp. <a href="https://github.com/akemp121/startup">GitHub</a></span>
 
