Finished practice page

--- a/practice.html
+++ b/practice.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <header class="container-fluid py-3 border-bottom">
 
@@ -40,7 +40,8 @@
                             <li><a href="index.html" class="btn btn-primary rounded-pill header-button">Home</a>
                             </li>
                             <li><a href="read.html" class="btn btn-primary rounded-pill header-button">Read</a></li>
-                            <li><a href="practice.html" class="btn btn-primary rounded-pill header-button active">Practice</a>
+                            <li><a href="practice.html"
+                                    class="btn btn-primary rounded-pill header-button active">Practice</a>
                             </li>
                             <li><a href="about.html" class="btn btn-primary rounded-pill header-button">About</a></li>
 
@@ -60,21 +61,60 @@
 
     </header>
 
-    <main>
+    <main class="container-fluid flex-grow-1 d-flex py-3">
 
-        <h1>Practice</h1>
+        <div class="row w-100">
 
-        <p>These are your saved words:</p>
+            <div class="col-md-3">
 
-        <ul>
+                <h1 class="fw-light">Practice</h1>
 
-            <li>cavolo <button type="button">X</button></li>
-            <li>giorno <button type="button">X</button></li>
-            <li>conoscere <button type="button">X</button></li>
-            <li>ghiaccio <button type="button">X</button></li>
-            <li>slancio <button type="button">X</button></li>
+                <p>These are your saved words:</p>
 
-        </ul>
+                <ul class="list-unstyled d-flex gap-2">
+
+                    <li class="border bg-light rounded-pill px-3 py-1 d-flex align-items-center">
+
+                        <span class="me-2">cavolo</span>
+                        <button type="button" class="btn-close" style="font-size: 12px;"></button>
+
+                    </li>
+
+                    <li class="border bg-light rounded-pill px-3 py-1 d-flex align-items-center">
+
+                        <span class="me-2">giorno</span>
+                        <button type="button" class="btn-close" style="font-size: 12px;"></button>
+
+                    </li>
+
+                    <li class="border bg-light rounded-pill px-3 py-1 d-flex align-items-center">
+
+                        <span class="me-2">conoscere</span>
+                        <button type="button" class="btn-close" style="font-size: 12px;"></button>
+
+                    </li>
+
+                    <li class="border bg-light rounded-pill px-3 py-1 d-flex align-items-center">
+
+                        <span class="me-2">ghiaccio</span>
+                        <button type="button" class="btn-close" style="font-size: 12px;"></button>
+
+                    </li>
+
+                    <li class="border bg-light rounded-pill px-3 py-1 d-flex align-items-center">
+
+                        <span class="me-2">slancio</span>
+                        <button type="button" class="btn-close" style="font-size: 12px;"></button>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+
+
+        </div>
 
     </main>
 
