Finished about page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <header class="container-fluid py-3 border-bottom">
 
@@ -42,7 +42,8 @@
                             <li><a href="read.html" class="btn btn-primary rounded-pill header-button">Read</a></li>
                             <li><a href="practice.html" class="btn btn-primary rounded-pill header-button">Practice</a>
                             </li>
-                            <li><a href="about.html" class="btn btn-primary rounded-pill header-button active">About</a></li>
+                            <li><a href="about.html" class="btn btn-primary rounded-pill header-button active">About</a>
+                            </li>
 
                         </ul>
                     </menu>
@@ -60,39 +61,57 @@
 
     </header>
 
-    <main>
+    <main class="container-fluid flex-grow-1 d-flex py-3">
 
-        <h1>About</h1>
+        <div class="row w-100">
 
-        <h3><i>Keep your foreign language proficiency afloat.</i></h3>
+            <div class="col-md-6">
 
-        <p>
 
-            Many people who have learned foreign languages (RMs) struggle
-            to find opportunities to practice. While the overall best way
-            to practice is speaking, other methods such as reading can provide
-            a solid practice, especially with strengthening vocabulary.
 
-        </p>
+                <div class="container-fluid py-3">
 
-        <p>
+                    <h1 class="fw-light">About</h1>
 
-            This app will allow users to read about topics they find
-            interesting at a difficulty that pushes them to learn new words.
-            Once they've accumulated enough unknown words, they'll be able to
-            memorize them and quiz themselves on what they've learned.
+                    <h4>Keep your foreign language proficiency afloat.</h4>
 
-        </p>
+                    <p>
 
-        <p>
+                        Many people who have learned foreign languages (RMs) struggle
+                        to find opportunities to practice. While the overall best way
+                        to practice is speaking, other methods such as reading can provide
+                        a solid practice, especially with strengthening vocabulary.
 
-            The process of reading, translating, and memorizing helped me
-            immensely when learning Spanish and Q'eqchi'. My goal is to streamline
-            the process into a single, specialized app.
+                    </p>
 
-        </p>
+                    <p>
 
-        <img src="bliss.jpg" width="800" height="500">
+                        This app will allow users to read about topics they find
+                        interesting at a difficulty that pushes them to learn new words.
+                        Once they've accumulated enough unknown words, they'll be able to
+                        memorize them and quiz themselves on what they've learned.
+
+                    </p>
+
+                    <p>
+
+                        The process of reading, translating, and memorizing helped me
+                        immensely when learning Spanish and Q'eqchi'. My goal is to streamline
+                        the process into a single, specialized app.
+
+                    </p>
+
+                    <img src="bliss.jpg" width="800" height="500" class="rounded-5">
+
+                </div>
+
+
+
+                
+
+            </div>
+
+        </div>
 
     </main>
 
